--- a/sass/signUp.scss
+++ b/sass/signUp.scss
@@ -12,7 +12,7 @@
 @import 'mixins/_rwd.scss';
 $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
 .signUpLightboxBlack {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -53,7 +53,10 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                     outline: none;
                     color: $colorPlaceholder;
                     font-size: $font-size-h2;
-                    &:hover {}
+                    &:hover {
+                        color: #fff;
+                        border-bottom: 1px solid $navColor;
+                    }
                 }
                 .selected {
                     border-bottom: 1px solid $navColor;
