--- a/sass/modules/_signUp.scss
+++ b/sass/modules/_signUp.scss
@@ -53,7 +53,9 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                     outline: none;
                     color: $colorPlaceholder;
                     font-size: $font-size-h2;
-                    &:hover {}
+                    &:hover {
+                        color: #fff;
+                    }
                 }
                 .selected {
                     border-bottom: 1px solid $navColor;
@@ -75,6 +77,7 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                     }
                     small {
                         font-size: $font-size-small;
+                        color: $colorPlaceholder;
                     }
                 }
                 .formBtn {
