--- a/sass/signUp.scss
+++ b/sass/signUp.scss
@@ -16,11 +16,18 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
     width: 100vw;
     height: 100vh;
     position: fixed;
-    z-index: 999999999999;
+    z-index: 1000;
     .signUpLightbox {
         width: 800px;
         height: 600px;
-        position: fixed;
+        z-index: 1001;
+        position: absolute;
+        .cancel {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            font-size: 20px;
+        }
         .bgImg {
             width: 400px;
             height: 600px;
@@ -77,11 +84,11 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                     }
                     small {
                         font-size: $font-size-small;
-                        color:$colorPlaceholder;
+                        color: $colorPlaceholder;
                     }
                 }
                 .formBtn {
-                    width: 200px;
+                    width: 240px;
                     border: 1px solid #333;
                     display: block;
                     line-height: 1.5em;
@@ -138,7 +145,6 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                     display: inline-block;
                     width: 100px;
                     font-size: $font-size-base;
-                    border-width: 2px;
                 }
             }
         }
