--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -8,6 +8,8 @@
     background-size: cover;
     z-index: 0;
     .searchsection{
+        // box-shadow: 0 1px 8px 0 rgba(0, 0, 0, .15);
+        // transition: box-shadow .15s ease-out;
         padding: 50px;
         width: 70%;  
         margin: auto;
