--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -381,6 +381,171 @@ header .icons a:hover {
   color: #fc516d;
 }
 
+.signUpLightboxBlack {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1000;
+  display: none;
+}
+
+.signUpLightbox {
+  width: 800px;
+  height: 600px;
+  z-index: 1001;
+  position: fixed;
+  display: none;
+}
+
+.signUpLightbox .cancel {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 20px;
+  z-index: 1002;
+}
+
+.signUpLightbox .bgImg {
+  width: 400px;
+  height: 600px;
+  float: left;
+  background-color: #333;
+  border-radius: 10px 0 0 10px;
+  background-image: url("../images/memberBG.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.signUpLightbox .formShape {
+  background-color: #91989f;
+  width: 400px;
+  height: 600px;
+  float: left;
+  border-radius: 0 10px 10px 0;
+  position: relative;
+}
+
+.signUpLightbox .formShape .chioce {
+  text-align: center;
+}
+
+.signUpLightbox .formShape .chioce:last-child {
+  margin-top: 20px;
+}
+
+.signUpLightbox .formShape .chioce button {
+  background-color: transparent;
+  border: none;
+  display: inline-block;
+  line-height: 2em;
+  transition: .1s;
+  outline: none;
+  color: rgba(245, 245, 245, 0.7);
+  font-size: 30px;
+}
+
+.signUpLightbox .formShape .chioce button:hover {
+  color: #fff;
+}
+
+.signUpLightbox .formShape .chioce .selected {
+  border-bottom: 1px solid #eaaf88;
+  color: #fff;
+}
+
+.signUpLightbox .formShape form {
+  padding: 50px;
+  margin: 0 auto;
+  color: #fff;
+  font-family: '../fonts/NotoSansCJKtc-Thin.otf';
+}
+
+.signUpLightbox .formShape form label {
+  margin-top: 10px;
+  margin-bottom: 4px;
+  display: block;
+  font-size: 18px;
+}
+
+.signUpLightbox .formShape form label:first-child {
+  margin-top: 0;
+}
+
+.signUpLightbox .formShape form label small {
+  font-size: 12px;
+  color: rgba(245, 245, 245, 0.7);
+}
+
+.signUpLightbox .formShape form .formBtn {
+  width: 240px;
+  border: 1px solid #333;
+  display: block;
+  line-height: 1.5em;
+  text-align: center;
+  border-radius: 1000px;
+  letter-spacing: 1px;
+  transition: .3s;
+  color: #333;
+  margin: 0 auto 30px;
+}
+
+.signUpLightbox .formShape form .formBtn:hover {
+  background-color: #eaaf88;
+  border: 1px solid #eaaf88;
+  color: #fff;
+}
+
+.signUpLightbox .formShape form input {
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(245, 245, 245, 0.7);
+  width: 100%;
+}
+
+.signUpLightbox .formShape form input:-ms-input-placeholder {
+  line-height: 1em;
+  padding: 5px 15px;
+  color: rgba(245, 245, 245, 0.7);
+  font-style: italic;
+  font-size: 12px;
+}
+
+.signUpLightbox .formShape form input:-moz-placeholder {
+  line-height: 1em;
+  padding: 5px 15px;
+  color: rgba(245, 245, 245, 0.7);
+  font-style: italic;
+  font-size: 12px;
+}
+
+.signUpLightbox .formShape form input::-moz-placeholder {
+  line-height: 1em;
+  padding: 5px 15px;
+  color: rgba(245, 245, 245, 0.7);
+  font-style: italic;
+  font-size: 12px;
+}
+
+.signUpLightbox .formShape form input::-webkit-input-placeholder {
+  line-height: 1em;
+  padding: 5px 15px;
+  color: rgba(245, 245, 245, 0.7);
+  font-style: italic;
+  font-size: 12px;
+}
+
+.signUpLightbox .formShape form #userPhoto {
+  display: none;
+}
+
+.signUpLightbox .formShape form .formSubmitBtn {
+  display: inline-block;
+  width: 100px;
+  font-size: 14px;
+}
+
 header ul li:nth-child(1) {
   background-color: #fff;
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
