--- a/sass/catContent.scss
+++ b/sass/catContent.scss
@@ -11,6 +11,7 @@
 @import 'mixins/_navNow.scss';
 @import "base/btn";
 @import "base/genderIcon";
+@import "./modules/_signUp.scss";
 @include navNow(1);
 .navTest {
     width: 20vw;
