貓咪跳起來 耶嘿(註冊&RWD做好了快來套用)

--- a/sass/modules/_signUp.scss
+++ b/sass/modules/_signUp.scss
@@ -1,144 +1,189 @@
-$colorPlaceholder: hsla(0, 0%, 96%, 0.7);
-.signUpLightboxBlack {
-    background-color: rgba(0, 0, 0, .8);
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    z-index: 1000;
-    display: none;
-}
+    $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
+    .signUpLightboxBlack {
+        background-color: rgba(0, 0, 0, .8);
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        z-index: 1000;
+        display: none;
+    }
 
-.signUpLightbox {
-    width: 800px;
-    height: 600px;
-    z-index: 1001;
-    position: fixed;
-    display: none;
-    .cancel {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        font-size: 20px;
-        z-index: 1002;
-    }
-    .bgImg {
-        width: 400px;
-        height: 600px;
-        float: left;
-        background-color: #333;
-        border-radius: 10px 0 0 10px;
-        background-image: url('../images/memberBG.jpg');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-    .formShape {
-        background-color: rgb(145, 152, 159);
-        width: 400px;
-        height: 600px;
-        float: left;
-        border-radius: 0 10px 10px 0;
-        position: relative;
-        .chioce {
-            text-align: center;
-            &:last-child {
-                margin-top: 20px;
-            }
-            button {
-                background-color: transparent;
-                border: none;
-                display: inline-block;
-                line-height: 2em;
-                transition: .1s;
-                outline: none;
-                color: $colorPlaceholder;
-                font-size: $font-size-h2;
-                &:hover {
-                    color: #fff;
-                }
-            }
-            .selected {
-                border-bottom: 1px solid $navColor;
-                color: #fff;
-            }
+    .signUpLightbox {
+        z-index: 1001;
+        position: fixed;
+        display: none;
+        .cancel {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            font-size: 20px;
+            z-index: 1002;
+            cursor: pointer;
         }
-        form {
-            padding: 50px;
-            margin: 0 auto;
-            color: #fff;
-            font-family: '../fonts/NotoSansCJKtc-Thin.otf';
-            label {
-                margin-top: 10px;
-                margin-bottom: 4px;
-                display: block;
-                font-size: $font-size-large;
-                &:first-child {
-                    margin-top: 0;
-                }
-                small {
-                    font-size: $font-size-small;
-                    color: $colorPlaceholder;
-                }
-            }
-            .formBtn {
-                width: 240px;
-                border: 1px solid #333;
-                display: block;
-                line-height: 1.5em;
+        .bgImg {
+            width: 400px;
+            height: 600px;
+            float: left;
+            background-color: #333;
+            border-radius: 10px 0 0 10px;
+            background-image: url('../images/memberBG.jpg');
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .formShape {
+            background-color: rgb(145, 152, 159);
+            width: 400px;
+            height: 600px;
+            float: left;
+            border-radius: 0 10px 10px 0;
+            position: relative;
+            .chioce {
                 text-align: center;
-                border-radius: 1000px;
-                letter-spacing: 1px;
-                transition: .3s;
-                color: #333;
-                margin: 0 auto 30px;
-                &:hover {
-                    background-color: $navColor;
-                    border: 1px solid $navColor;
+                &:last-child {
+                    margin-top: 20px;
+                }
+                button {
+                    background-color: transparent;
+                    border: none;
+                    display: inline-block;
+                    line-height: 2em;
+                    transition: .1s;
+                    outline: none;
+                    color: $colorPlaceholder;
+                    font-size: $font-size-h2;
+                    cursor: pointer;
+                    &:hover {
+                        color: #fff;
+                    }
+                }
+                .selected {
+                    border-bottom: 1px solid $navColor;
                     color: #fff;
                 }
             }
-            input {
-                border: none;
-                background-color: transparent;
-                border-bottom: 1px solid $colorPlaceholder;
-                width: 100%;
-                &:-ms-input-placeholder {
-                    line-height: 1em;
-                    padding: 5px 15px;
-                    color: $colorPlaceholder;
-                    font-style: italic;
-                    font-size: $font-size-small;
+            form {
+                padding: 50px;
+                margin: 0 auto;
+                color: #fff;
+                font-family: '../fonts/NotoSansCJKtc-Thin.otf';
+                label {
+                    margin-top: 10px;
+                    margin-bottom: 4px;
+                    display: block;
+                    font-size: $font-size-large;
+                    &:first-child {
+                        margin-top: 0;
+                    }
+                    small {
+                        font-size: $font-size-small;
+                        color: $colorPlaceholder;
+                    }
                 }
-                &:-moz-placeholder {
-                    line-height: 1em;
-                    padding: 5px 15px;
-                    color: $colorPlaceholder;
-                    font-style: italic;
-                    font-size: $font-size-small;
+                .formBtn {
+                    width: 240px;
+                    border: 1px solid #333;
+                    display: block;
+                    line-height: 1.5em;
+                    text-align: center;
+                    border-radius: 1000px;
+                    letter-spacing: 1px;
+                    transition: .3s;
+                    color: #333;
+                    margin: 0 auto 30px;
+                    &:hover {
+                        background-color: $navColor;
+                        border: 1px solid $navColor;
+                        color: #fff;
+                    }
                 }
-                &::-moz-placeholder {
-                    line-height: 1em;
-                    padding: 5px 15px;
-                    color: $colorPlaceholder;
-                    font-style: italic;
-                    font-size: $font-size-small;
+                input {
+                    border: none;
+                    background-color: transparent;
+                    border-bottom: 1px solid $colorPlaceholder;
+                    width: 100%;
+                    &:-ms-input-placeholder {
+                        line-height: 1em;
+                        padding: 5px 15px;
+                        color: $colorPlaceholder;
+                        font-style: italic;
+                        font-size: $font-size-small;
+                    }
+                    &:-moz-placeholder {
+                        line-height: 1em;
+                        padding: 5px 15px;
+                        color: $colorPlaceholder;
+                        font-style: italic;
+                        font-size: $font-size-small;
+                    }
+                    &::-moz-placeholder {
+                        line-height: 1em;
+                        padding: 5px 15px;
+                        color: $colorPlaceholder;
+                        font-style: italic;
+                        font-size: $font-size-small;
+                    }
+                    &::-webkit-input-placeholder {
+                        line-height: 1em;
+                        padding: 5px 15px;
+                        color: $colorPlaceholder;
+                        font-style: italic;
+                        font-size: $font-size-small;
+                    }
                 }
-                &::-webkit-input-placeholder {
-                    line-height: 1em;
-                    padding: 5px 15px;
-                    color: $colorPlaceholder;
-                    font-style: italic;
-                    font-size: $font-size-small;
+                #userPhoto {
+                    display: none;
                 }
-            }
-            #userPhoto {
-                display: none;
-            }
-            .formSubmitBtn {
-                display: inline-block;
-                width: 100px;
-                font-size: $font-size-base;
+                .formSubmitBtn {
+                    display: inline-block;
+                    width: 100px;
+                    font-size: $font-size-base;
+                }
             }
         }
     }
-}
+
+    @include respond-to(medium) {
+        .signUpLightbox {
+            .bgImg {
+                display: none;
+                visibility: hidden;
+                width: 0;
+                height: 0;
+            }
+            .formShape {
+                border-radius: 10px;
+            }
+        }
+    }
+
+    @include respond-to(small) {
+        .signUpLightbox {
+            .bgImg {
+                display: none;
+                visibility: hidden;
+                width: 0;
+                height: 0;
+            }
+            .formShape {
+                width: 300px;
+                border-radius: 10px;
+                .chioce {
+                    button {
+                        font-size: $font-size-base;
+                    }
+                }
+                form {
+                    .formBtn {
+                        width: 180px;
+                        font-size: $font-size-base;
+                    }
+                    .formSubmitBtn {
+                        display: inline-block;
+                        width: 80px;
+                        font-size: $font-size-base;
+                    }
+                }
+            }
+        }
+    }
