--- a/css/catContent.css
+++ b/css/catContent.css
@@ -391,8 +391,6 @@ header .icons a:hover {
 }
 
 .signUpLightbox {
-  width: 800px;
-  height: 600px;
   z-index: 1001;
   position: fixed;
   display: none;
@@ -404,6 +402,7 @@ header .icons a:hover {
   right: 5px;
   font-size: 20px;
   z-index: 1002;
+  cursor: pointer;
 }
 
 .signUpLightbox .bgImg {
@@ -444,6 +443,7 @@ header .icons a:hover {
   outline: none;
   color: rgba(245, 245, 245, 0.7);
   font-size: 30px;
+  cursor: pointer;
 }
 
 .signUpLightbox .formShape .chioce button:hover {
@@ -546,6 +546,43 @@ header .icons a:hover {
   font-size: 14px;
 }
 
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+  .signUpLightbox .formShape {
+    border-radius: 10px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+  .signUpLightbox .formShape {
+    width: 300px;
+    border-radius: 10px;
+  }
+  .signUpLightbox .formShape .chioce button {
+    font-size: 14px;
+  }
+  .signUpLightbox .formShape form .formBtn {
+    width: 180px;
+    font-size: 14px;
+  }
+  .signUpLightbox .formShape form .formSubmitBtn {
+    display: inline-block;
+    width: 80px;
+    font-size: 14px;
+  }
+}
+
 header ul li:nth-child(1) {
   background-color: #fff;
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
@@ -627,7 +664,7 @@ header ul li:nth-child(1):after {
   vertical-align: top;
   line-height: 1.5em;
   padding-top: 20px;
-  padding-left: 10px;
+  padding-left: 60px;
   position: relative;
   width: calc(100% - 310px);
   height: 400px;
