--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -391,8 +391,6 @@ header .icons a:hover {
 }
 
 .signUpLightbox {
-  width: 800px;
-  height: 600px;
   z-index: 1001;
   position: fixed;
   display: none;
@@ -404,6 +402,7 @@ header .icons a:hover {
   right: 5px;
   font-size: 20px;
   z-index: 1002;
+  cursor: pointer;
 }
 
 .signUpLightbox .bgImg {
@@ -444,6 +443,7 @@ header .icons a:hover {
   outline: none;
   color: rgba(245, 245, 245, 0.7);
   font-size: 30px;
+  cursor: pointer;
 }
 
 .signUpLightbox .formShape .chioce button:hover {
@@ -544,6 +544,43 @@ header .icons a:hover {
   display: inline-block;
   width: 100px;
   font-size: 14px;
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+  .signUpLightbox .formShape {
+    border-radius: 10px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .signUpLightbox .bgImg {
+    display: none;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+  .signUpLightbox .formShape {
+    width: 300px;
+    border-radius: 10px;
+  }
+  .signUpLightbox .formShape .chioce button {
+    font-size: 14px;
+  }
+  .signUpLightbox .formShape form .formBtn {
+    width: 180px;
+    font-size: 14px;
+  }
+  .signUpLightbox .formShape form .formSubmitBtn {
+    display: inline-block;
+    width: 80px;
+    font-size: 14px;
+  }
 }
 
 header ul li:nth-child(1) {
